--- a/index.html
+++ b/index.html
@@ -31,12 +31,15 @@
   </section>
 
   <section class="choco-section">
-    <div class="choco-text">
-      <h2>PARA OS DIAS FRIOS</h2>
-      <p>CONHEÇA NOSSA LINHA <strong>CHOCOFFE</strong></p>
-    </div>
-    <div class="choco-image">
-      <img src="./img inicio/Rectangle.png" alt="Xícara Choco">
+    <div class="choco-container">
+      <div class="choco-text">
+        <h2>PARA OS DIAS FRIOS</h2>
+        <p>CONHEÇA NOSSA LINHA <strong>CHOCOFFE</strong></p>
+        <a href="menu.html" class="botao-choco">SAIBA MAIS</a>
+      </div>
+      <div class="choco-image">
+        <img src="./img inicio/Rectangle.png" alt="Xícara Choco">
+      </div>
     </div>
   </section>
 
@@ -63,21 +66,32 @@
   </section>
 
   <footer class="rodape">
-    <div class="redes">
-      <img src="./img inicio/Redes Sociais.png" alt="Redes sociais">
+    <div class="rodape-conteudo">
+      <div class="redes" data-aos="fade-right">
+        <a href="https://linkedin.com" target="_blank">
+          <img src="./img inicio/Redes Sociais.png" alt="LinkedIn" title="LinkedIn">
+        </a>
+      </div>
+  
+      <div class="links" data-aos="fade-up">
+        <a href="#">SOBRE NÓS</a>
+        <a href="#">SERVIÇOS</a>
+        <a href="#">CONTATO</a>
+      </div>
+  
+      <div class="pay" data-aos="fade-left">
+        <img src="./img inicio/paypal.png" alt="PayPal" title="PayPal">
+      </div>
     </div>
-    <div class="pay">
-      <img src="./img inicio/Paypal (1).png" alt="Formas de pagamento">
-    </div>
-    <div class="links">
-      <a href="#">SOBRE NÓS</a>
-      <a href="#">SERVIÇOS</a>
-      <a href="#">CONTATO</a>
-    </div>
+  
     <p class="copyright">
       Copyright © 2024-2034 LeituraExpressa Company. Todos os direitos reservados.
     </p>
+  
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="script.js"></script>
   </footer>
+  
 
 </body>
 </html>
